--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -26,3 +26,12 @@ color: #fff;
 .container {
     padding-top: 5px;
 }
+
+.card {
+    border: 2px solid rgba(0,0,0,0.2);
+    border-radius: 1em;
+    box-shadow: 10px 10px 5px rgba(0,0,0,0.4);
+    cursor: pointer;
+    margin: 1em;
+    padding: 2em;
+}
